Fix carousel border-right image overlap Clean up style

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -25,11 +25,6 @@
 }
 
 .carousel-img-container{
-  float: left;
+  display:inline-block;
   object-fit: cover;
-}
-
-.carousel-img-container img{
-  width: 100%;
-  height: 100%;
 }
