--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,11 +1,11 @@
 .header-top{
   width: 100%;
-  background: blue;
+  background: #7289da;
   padding: 1rem 0;
   text-align: center;
   font-size: 25px;
   font-weight: bold;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #445282;
 }
 
 .header-top a{
